ingress/controllers/nginx/examples/ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vpclub-ingress
spec:
  rules:
  - host: nginx.vpclub.cn
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: echoheaders-x
          servicePort: 80
  - host: hehe.vpclub.cn
    http:
      paths:
      - path: /hehe
        backend:
          serviceName: echoheaders-y
          servicePort: 80
      - path: /nginx
        backend:
          serviceName: echoheaders-x
          servicePort: 80
